<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<TextView
		android:layout_above="@+id/linearLayout"
		android:layout_centerHorizontal="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/dossier"
		/>
	<TableLayout 
		android:id="@+id/tableLayout"
		android:layout_centerInParent="true"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:stretchColumns="0"
		>
		<TableRow>
			<TextView  
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" 
				android:text="@string/name"
				/>
			<TextView  
				android:id="@+id/name"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" 
				android:text="@string/jane_doe"
				/>
		</TableRow>
		<TableRow>
			<TextView  
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" 
				android:text="@string/hair"
				/>
			<TextView  
				android:id="@+id/hair"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" 
				android:text="@string/black"
				/>
		</TableRow>
		<TableRow>
			<TextView  
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" 
				android:text="@string/age"
				/>
			<TextView  
				android:id="@+id/age"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" 
				android:text="@string/twenty_four"
				/>
		</TableRow>
		<TableRow>
			<TextView  
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" 
				android:text="@string/build"
				/>
			<TextView  
				android:id="@+id/build"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" 
				android:text="@string/twenty_four"
				/>
		</TableRow>
		<TableRow>
			<TextView  
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" 
				android:text="@string/ethnicity"
				/>
			<TextView  
				android:id="@+id/ethnicity"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" 
				android:text="@string/black"
				/>
		</TableRow>
		<RelativeLayout 
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>
			<LinearLayout 
				android:layout_centerHorizontal="true"
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="20dp"
				>
				<!--
				<Button  
					android:layout_width="0px" 
					android:layout_weight="50" 
					android:layout_height="wrap_content" 
					android:text="@string/cancel"
					/>

				<Button  
					android:id="@+id/okButton"
					android:layout_width="0px" 
					android:layout_weight="50" 
					android:layout_height="wrap_content" 
					android:text="@string/ok"
					/>
				-->
			</LinearLayout>
		</RelativeLayout>
	</TableLayout>
</RelativeLayout>
