<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout 
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <EditText  
            android:id="@+id/RegisterActivity_email"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:hint="@string/email"
            />
        <EditText  
            android:id="@+id/RegisterActivity_first_name"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:hint="@string/first_name"
            />
        <EditText  
            android:id="@+id/RegisterActivity_last_name"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:hint="@string/last_name"
            />
        <RelativeLayout 
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout 
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                >
                <Button  
                    android:layout_width="0px" 
                    android:layout_weight="50" 
                    android:layout_height="wrap_content" 
                    android:text="@string/cancel"
                    />
                <Button  
                    android:id="@+id/RegisterActivity_okButton"
                    android:layout_width="0px" 
                    android:layout_weight="50" 
                    android:layout_height="wrap_content" 
                    android:text="@string/ok"
                    />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
