<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout 
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <!--
        <Button android:id="@+id/MainActivity_Register"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:text="@string/register"
            />
        -->
        <Button android:id="@+id/MainActivity_Login"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:text="@string/login"
            />
        <Button android:id="@+id/MainActivity_Objectives"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:text="@string/objectives"
            />
        <Button android:id="@+id/MainActivity_Targets"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:text="@string/targets"
            />
    </LinearLayout>
</RelativeLayout>
